--- a/module1-solution/index.html
+++ b/module1-solution/index.html
@@ -8,22 +8,30 @@
       .message { font-size: 1.3em; font-weight: bold; }
     </style>
   </head>
-<body>
-   <div class="container">
+<body ng-app="LunchCheck">
+   <div class="container" ng-controller="LunchCheckController">
      <h1>Lunch Checker</h1>
 
          <div class="form-group">
-             <input id="lunch-menu" type="text"
+             <input ng-model="lunchMenu" id="lunch-menu" type="text"
              placeholder="list comma separated dishes you usually have for lunch"
-             class="form-control">
+             class="form-control"
+             style="border-color: {{color}};">
+
+             <div style="font-size: 12px">
+                An empty item will not be considered as an allowable value (i.e., item1, ,item2).
+             <div>
+             <br>
          </div>
          <div class="form-group">
-             <button class="btn btn-default">Check If Too Much</button>
+             <button ng-click="checkIt()" class="btn btn-default">Check If Too Much</button>
          </div>
-         <div class="form-group message">
-           <!-- Your message can go here. -->
+         <div class="form-group message" style="color: {{color}};">
+           {{ message }}
          </div>
    </div>
 
+   <script type="text/javascript" src="angular.min.js"></script>
+   <script type="text/javascript" src="app.js"></script>
 </body>
 </html>
